# advance_rag_workshop

./: .env.example  QUICKSTART.md  README.md  pyproject.toml
RAG_demo/: README.md  advanced_eval_results.json  baseline_eval_results.json  demo_01_hyde_query_enhancement.ipynb  demo_02_multi_query_decomposition.ipynb  demo_03_hybrid_search.ipynb  demo_04_hierarchical_retrieval.ipynb  demo_05_reranking_cross_encoders.ipynb  demo_06_context_compression.ipynb  demo_07_corrective_rag.ipynb  demo_08_self_rag.ipynb  demo_09_agentic_rag.ipynb  demo_10_graphrag.ipynb  demo_11_rag_evaluation.ipynb  demo_12_ragas_evaluation.ipynb
RAG_demo/data/finance_docs/: market_analysis.md  portfolio_diversification.md  quantitative_trading.md  reinforcement_learning_finance.md  risk_management.md
RAG_demo/data/long_form_docs/: advanced_chunking_strategies.md  embedding_models_deep_dive.md  rag_comprehensive_guide.md
RAG_demo/data/ml_concepts/: gradient_boosting.md  kmeans_clustering.md  neural_networks.md  random_forests.md  support_vector_machines.md
RAG_demo/data/tech_docs/: bert_model.md  docker_containers.md  embeddings_ml.md  gpt4_model.md  rest_api.md  transformer_architecture.md
