[project]
name = "rag-workshop"
version = "1.0.0"
description = "Advanced RAG Workshop - Techniques for Retrieval-Augmented Generation"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Workshop Author", email = "author@example.com"}
]

dependencies = [
    # Core LlamaIndex - this includes most integrations
    "llama-index>=0.10.0",
    # Azure OpenAI integrations
    "llama-index-llms-azure-openai",
    "llama-index-embeddings-azure-openai",
    # Retrievers
    "llama-index-retrievers-bm25",
    # Sentence Transformers for embeddings and cross-encoders
    "sentence-transformers>=2.2.0",
    # PyTorch (required for sentence-transformers)
    "torch>=2.0.0",
    # Hugging Face integrations
    "llama-index-embeddings-huggingface",
    # LangChain OpenAI for RAGAS
    "langchain-openai>=0.0.2",
    # RAGAS for evaluation
    "ragas>=0.1.0",
    "datasets>=2.14.0",
    # Web search tools
    "duckduckgo-search>=4.0.0",
    "arxiv>=2.0.0",
    # Data handling and analysis
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Visualization
    "matplotlib>=3.7.0",
    # Environment and utilities
    "python-dotenv>=1.0.0",
    # Jupyter support
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
